# Scrapper-bs4-

./: .gitignore  Dockerfile  LICENSE  README.md  authors.json  docker-compose.yml  pyproject.toml  quotes.json  requirements.txt  scrapper.py
src/: autobackup.py  autoparse.py  conf.py  models.py  scrapper_bs4.py  scrapper_plwrght.py
